Fix modal iframe height
Previously, modal iframe was overlapping its container by ~20px. Using new
flex CSS properties prevent this behavior. This property isn't supported by
older browsers though, but this isn't critical.

--- a/web/static/css/style.scss
+++ b/web/static/css/style.scss
@@ -59,6 +59,26 @@ $problems-critical-color: #F14122;
 	-ms-user-select: $value;
 	user-select: $value;
 }
+@mixin display-flex {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+}
+@mixin flex($value) {
+	-webkit-box-flex: 1;
+	-moz-box-flex: 1;
+	-webkit-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
+}
+@mixin flex-direction($value) {
+	-webkit-flex-direction: $value;
+	-moz-flex-direction: $value;
+	-ms-flex-direction: $value;
+	flex-direction: $value;
+}
 
 /* Overall layout */
 html, body {
@@ -1081,6 +1101,8 @@ footer {
 }
 
 .modal {
+	@include display-flex;
+	@include flex-direction(column);
 	position: fixed;
 	top: 10%;
 	left: 0;
@@ -1099,8 +1121,8 @@ footer {
 		font-size: 15px;
 		color: #fff;
 		display: block;
-		padding: 5px 5px 10px 20px;
-		margin: -1px;
+		padding: 5px 5px 5px 20px;
+		margin: -1px -1px 0 -1px;
 		@include border-radius(3px 3px 0 0);
 		border: 1px solid darken($secondary-color, 10);
 		background-color: $secondary-color;
@@ -1138,6 +1160,7 @@ footer {
 	}
 
 	iframe {
+		@include flex(1);
 		width: 100%;
 		height: 100%;
 		border: 0;
